Minor cleanup, exclude new module from jacoco